--- a/package.json
+++ b/package.json
@@ -6,15 +6,8 @@
   "main:esnext": "index.es2015.js",
   "typings": "index.d.ts",
   "scripts": {
-    "build": "npm run clean && npm run lint && tsc -d -t es2015 && mv ./index.js ./index.es2015.js && tsc -t es5",
-    "clean": "rm -f ./*.d.ts && rm -f ./*.map",
-    "lint": "tslint -p ./tsconfig.json index.tsx test.tsx",
-    "pretest": "npm run build",
-    "prepublishOnly": "npm test",
-    "test": "karma start --single-run",
-    "tdd": "npm-run-all -pr watch:*",
-    "watch:ts": "tsc -w",
-    "watch:test": "karma start"
+    "build": "webpack --env dev && webpack --env build --display-modules",
+    "dev": "webpack --progress --colors --watch --env dev"
   },
   "repository": {
     "type": "git",
@@ -45,6 +38,11 @@
     "react-dom": ">=15"
   },
   "devDependencies": {
+    "@babel/cli": "^7.0.0-beta.51",
+    "@babel/core": "^7.0.0-beta.51",
+    "@babel/preset-env": "^7.0.0-beta.51",
+    "@babel/preset-react": "^7.0.0",
+    "@babel/preset-typescript": "^7.3.3",
     "@types/angular": "^1.6.53",
     "@types/angular-mocks": "^1.7.0",
     "@types/jasmine": "^3.3.8",
@@ -54,6 +52,13 @@
     "@types/react-dom": "^16.0.11",
     "angular-mocks": "^1.7.6",
     "angular-resource": "^1.7.6",
+    "babel-eslint": "^8.0.3",
+    "babel-loader": "^8.0.0-beta.4",
+    "babel-plugin-add-module-exports": "^0.2.1",
+    "babel-plugin-istanbul": "^5.1.0",
+    "babel-plugin-lodash": "^3.3.4",
+    "babel-preset-env": "^7.0.0-beta.3",
+    "babel-register": "^7.0.0-beta.3",
     "browserify": "^16.2.3",
     "jasmine": "^3.3.1",
     "jasmine-core": "^3.3.0",
@@ -63,15 +68,21 @@
     "karma-jasmine": "^2.0.1",
     "karma-mocha-reporter": "^2.2.5",
     "karma-source-map-support": "^1.3.0",
+    "lodash-webpack-plugin": "^0.11.5",
     "ngimport": "^1.0.0",
     "npm-run-all": "^4.1.5",
+    "nyc": "^13.1.0",
     "prop-types": "^15.6.2",
     "react": "^16.7.0",
     "react-dom": "^16.7.0",
     "rollupify": "^0.5.1",
+    "ts-loader": "^5.3.3",
     "tslint": "^5.12.1",
-    "typescript": "^3.3.1",
-    "watchify": "^3.11.0"
+    "typescript": "^3.3.3333",
+    "watchify": "^3.11.0",
+    "webpack": "^4.12.2",
+    "webpack-cli": "^3.0.8",
+    "yargs": "^10.0.3"
   },
   "dependencies": {
     "@types/lodash.frompairs": "^4.0.3",
